--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,12 @@
 <html>
 	<head>
 		<title>Alan Banks</title>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+		<script type="text/javascript">
+		  (function(){
+			  emailjs.init("user_nxC9AAKXkUX9nXEIIfcqm");
+		  })();
+		</script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
