--- a/project.html
+++ b/project.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/projects.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -40,103 +41,99 @@
 				</nav>
 
 				<!-- Main -->
-					<div id="main">
+				<div id="main">
 
-						<!-- Featured Post -->
-						<article class="post featured">
-							<header class="major">
-								<h2><a href="#">Projects</a></h2>
-							</header>
-							<hr/>
-							<h3>My latest project<br/>"Current Trends"</h3>
-							<a href="#" class="image main"><img src="images/current_trends_screenshot.png" alt="" /></a>
-							<ul class="actions special">
-								<li><a target="_blank" href="https://current-trends-app.herokuapp.com/" class="button large">Check it out</a></li>
-							</ul>
-						</article>
-
-					<!-- Posts -->
-						<section class="posts">
-							<article>
-								<header>
-									<span class="date">April 24, 2017</span>
-									<h2><a href="#">Sed magna<br />
-									ipsum faucibus</a></h2>
-								</header>
-								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
-								</ul>
-							</article>
-							<article>
-								<header>
-									<span class="date">April 22, 2017</span>
-									<h2><a href="#">Primis eget<br />
-									imperdiet lorem</a></h2>
-								</header>
-								<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
-								</ul>
-							</article>
-							<article>
-								<header>
-									<span class="date">April 18, 2017</span>
-									<h2><a href="#">Ante mattis<br />
-									interdum dolor</a></h2>
-								</header>
-								<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
-								</ul>
-							</article>
-							<article>
-								<header>
-									<span class="date">April 14, 2017</span>
-									<h2><a href="#">Tempus sed<br />
-									nulla imperdiet</a></h2>
-								</header>
-								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
-								</ul>
-							</article>
-							<article>
-								<header>
-									<span class="date">April 11, 2017</span>
-									<h2><a href="#">Odio magna<br />
-									sed consectetur</a></h2>
-								</header>
-								<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
-								</ul>
-							</article>
-							<article>
-								<header>
-									<span class="date">April 7, 2017</span>
-									<h2><a href="#">Augue lorem<br />
-									primis vestibulum</a></h2>
-								</header>
-								<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
-								</ul>
-							</article>
-						</section>
-
+				<article class="post featured">
+					<header class="major">
+						<h2><a href="#">Projects</a></h2>
+					</header>
+					<hr/>
+					<h2>My latest project<br/>"Current Trends"</h2>
+					<ul class="project-git-logo-ul">
+						<li>
+							<h2 class="project-git-logo icon brands fa-github large">Github: </h2>
+							<a rel="noopener noreferrer" target="_blank" class="project-git-links-front-end button small" href="https://github.com/alanbanks229/current_trends_app_frontend">Front-End</a>
+							<a rel="noopener noreferrer" target="_blank" class="project-git-links-back-end button small" href="https://github.com/alanbanks229/current_trends_app_backend">Back-End</a>
+						</li>
+					</ul>
+					<div class="image main">
+							<iframe width="800" height="560" src="https://www.youtube.com/embed/N-hRG1RldIY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe> 
 					</div>
+					<ul class="actions special">
+						<li><span class="button disabled">Unavailable</span></li>
+					</ul>
+					<p style="color: red;"><b>Update: 6/3/20</b>
+						<br/>
+						Due to recent changes in NEWSAPI developer plan, the live site has been taken down from heroku.
+						<br/> 
+						The specific change prevents the ability to fetch news articles outside of a test environment.
+					</p>
+					<p>An online search engine where users can get news around the world.<br/>
+						<li>Filter news by categories and languages</li>
+						<li>Get your local news</li>
+						<li>Get your local 5-day weather forecast</li>
+					</p>
+				</article>
+		
+				<section class="posts">
+					<article>
+						<header>
+							<h2><a href="#">Mod 4 Project<br />
+								"Draw Off"
+								</a>
+							</h2>)
+						</header>
+						<ul class="project-git-logo-ul-smaller">
+							<li>
+								<h3 class="project-git-logo-smaller icon brands fa-github">Github: </h3>
+								<a rel="noopener noreferrer" target="_blank" class="project-git-links-front-end button small" href="https://github.com/IdleScV/mod4_frontend">Front-End</a>
+								<a rel="noopener noreferrer" target="_blank" class="project-git-links-back-end button small" href="https://github.com/alanbanks229/mod4_backend">Back-End</a>
+							</li>
+						</ul>
+						<div class="image fit">
+							<iframe height="230px" width="560px" src="https://www.youtube.com/embed/4vn4oCgs-wc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe> 
+						</div>
+						<p>An online multiplayer game where users are given a prompt to draw and the winner has the most likes.<br/>
+						<li> Multiple game lobbies!</li>
+						<li>Play to get the highest rating!</li>
+						</p>
+						<ul class="actions special">
+							<li><a rel="noopener noreferrer" target="_blank" href="https://draw-off-app.herokuapp.com/" class="button">Live Site</a></li>
+						</ul>
+					</article>
+					<article>
+						<header>
+							<h2><a href="#">Mod 2 Project<br />
+								"Askit"</a>
+							</h2>
+						</header>
+						<ul class="project-git-logo-ul-smaller">
+							<li>
+								<h3 class="project-git-logo-smaller icon brands fa-github">Github: </h3>
+								<a rel="noopener noreferrer" target="_blank" class="project-git-links-front-end button small" href="https://github.com/alanbanks229/Mod_2_Project">Github</a>
+							</li>
+						</ul>
+						<a href="#" class="image fit"><img src="images/mod2_pic_in_action.png" alt="" /></a>
+						<p>An online forum where you can post any kind of question under specific categories and receive responses from other users who use this app!
+							<br/>
+							Users can also add additional categories with validations from admins.
+						</p>
+						<ul class="live_link_ul actions special">
+							<li><span class="button disabled">Coming Soon</span></li>
+						</ul>
+					</article>
+				</section>
+		
+					<header class="major">
+						<span class="date">More to come 😊</span>
+					</header>
+		
+				</div>	
 
 				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+				<div id="copyright">
+					<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+				</div>
 
 			</div>
 
