--- a/project.html
+++ b/project.html
@@ -48,7 +48,7 @@
 						<h2><a href="#">Projects</a></h2>
 					</header>
 					<hr/>
-					<h2>My latest project<br/>"Current Trends"</h2>
+					<h2>"Current Trends"</h2>
 					<ul class="project-git-logo-ul">
 						<li>
 							<h2 class="project-git-logo icon brands fa-github large">Github: </h2>
@@ -59,29 +59,28 @@
 					<div class="image main">
 							<iframe width="800" height="560" src="https://www.youtube.com/embed/N-hRG1RldIY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe> 
 					</div>
-					<ul class="actions special">
-						<li><span class="button disabled">Unavailable</span></li>
-					</ul>
 					<p style="color: red;"><b>Update: 6/3/20</b>
 						<br/>
 						Due to recent changes in NEWSAPI developer plan, the live site has been taken down from heroku.
 						<br/> 
 						The specific change prevents the ability to fetch news articles outside of a test environment.
 					</p>
+					<b style="float: left;">Features:</b><br/>
 					<p>An online search engine where users can get news around the world.<br/>
-						<li>Filter news by categories and languages</li>
-						<li>Get your local news</li>
-						<li>Get your local 5-day weather forecast</li>
+						<ul class="current_trends_features">
+							<li>Filter news by categories and languages</li>
+							<li>Get your local news</li>
+							<li>Get your local 5-day weather forecast</li>
+						</ul>
 					</p>
 				</article>
 		
 				<section class="posts">
 					<article>
 						<header>
-							<h2><a href="#">Mod 4 Project<br />
+							<h2>
 								"Draw Off"
-								</a>
-							</h2>)
+							</h2>
 						</header>
 						<ul class="project-git-logo-ul-smaller">
 							<li>
@@ -103,8 +102,8 @@
 					</article>
 					<article>
 						<header>
-							<h2><a href="#">Mod 2 Project<br />
-								"Askit"</a>
+							<h2>
+								"Askit"
 							</h2>
 						</header>
 						<ul class="project-git-logo-ul-smaller">
