--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Alan Banks</title>
+		<title>Alan Banks Contact</title>
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
 		<script type="text/javascript">
 		  (function(){
