this should be updating, added emoji to index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							</div>
 						</header>
 						<header>
-							<h3>Musician turned Software Engineer</h3>
+							<h3>🎵 Musician turned Software Engineer 💻</h3>
 						</header>
 						<p>From a young age, I enjoyed singing, playing piano, and using technology to create interesting sounds with MIDI. While studying and creating music compositions in undergrad, there were numerous times I would look at a completed score and say "it's not done." I kept going deeper to find the details that contribute to the theme I was looking for in my pieces.</p>
 						<p>Having transitioned to code, the same mindset of finessing and perfecting doesn't stop. "Just because the code produces the right answer, it doesn't mean that it is optimal or efficient."</p>
@@ -79,7 +79,7 @@
 
 			<!-- Copyright -->
 				<div id="copyright">
-					<ul><li>&copy; 2020 All rights reserved.</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					<ul><li>&copy; 2020 All rights reserved.</li><li>Design from <a href="https://html5up.net">HTML5 UP</a></li></ul>
 				</div>
 
 			</div>
