added small changes to hopefully see changes in title of html

--- a/project.html
+++ b/project.html
@@ -61,9 +61,9 @@
 					</div>
 					<p style="color: red;"><b>Update: 6/3/20</b>
 						<br/>
-						Due to recent changes in NEWSAPI developer plan, the live site has been taken down from heroku.
+						Due to recent changes in NEWSAPI developer plan, the live site has been taken down from heroku :(
 						<br/> 
-						The specific change prevents the ability to fetch news articles outside of a test environment.
+						The specific change prevented the ability to fetch news articles outside of a test environment.
 					</p>
 					<b style="float: left;">Features:</b><br/>
 					<p>An online search engine where users can get news around the world.<br/>
