--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 			<!-- Copyright -->
 				<div id="copyright">
-					<ul><li>&copy; 2020 All rights reserved.</li><li>Design from <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					<ul><li>&copy; 2020 All rights reserved.</li><li>Design from: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 				</div>
 
 			</div>
