fixed button hover bug on projects page

--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,11 @@
 	Massively by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+				window.addEventListener('DOMContentLoaded', (event) => {
+				console.log('Dom loaded and parsed');
+				// Insert loading articles icon here?
+				let labtop_desktop_user = document.body.offsetWidth >= 980;
+				return labtop_desktop_user;
 -->
 <html>
 	<head>
