added updates to the resume page, made a few fonts smaller, and overall provided better readability

--- a/resume.html
+++ b/resume.html
@@ -54,9 +54,9 @@
 							<header class="resume_heading">
 								<h2>TECHNICAL SKILLS</h2>
 							</header>
-							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<p class="technical_skills_p" style="display: inline-flex;">
-									• ​ MERN Stack ​•​ Javascript(ES6) ​•​​ Java ​• ​​Python3 ​• ​​Flask ​• ​​Ruby ​•​​ Rails ​• ​​Linux ​• ​GIT ​•​​ CSS3/HTML5 ​•<br/>• ​​Bootstrap ​• ​API Development/Consumption ​•​​ JSON ​• ​​PostgreSQL ​•​​ NoSQL (​MongoDB) ​​• ​SQlite •<br/>• MySQL ​•
+							<div style="border-color: rgb(149, 149, 149); padding: 0.5rem;" class="box">
+								<p class="technical_skills_p" style="display: inline-flex; font-size: small;">
+									• ​ MERN Stack ​•​ Javascript(ES6) ​•​​ Java ​• ​​Python3 ​• ​​Flask ​• ​​Ruby ​•​​ Rails ​• ​​Linux ​• ​GIT ​•​​ CSS3/HTML5 ​• ​​Bootstrap ​• ​API Development/Consumption ​•​​ JSON ​• ​​PostgreSQL ​•​​ NoSQL (​MongoDB) ​​• ​SQlite • MySQL ​•
 								</p>
 							</div>
 							<hr/>
@@ -64,30 +64,34 @@
 								<h2>TECHNICAL PROJECTS</h2>
 							</header>
 							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<h2 style="font-size: 24px;">Current Trends</h2>
+								<h2 style="font-size: 20px;">Current Trends</h2>
 								<ul class="actions small">
 									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://github.com/alanbanks229/current_trends_app_frontend"> Github Frontend</a></li>
 									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://github.com/alanbanks229/current_trends_app_backend"> Github Backend</a></li>
 									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/watch?time_continue=1&v=N-hRG1RldIY&feature=emb_logo"> Demo</a></li>
 								</ul>
 		
-								<p>An online web search engine made for accessing news locally and across the globe. </p>
+								<p class="technical_skills_p" style="font-size: medium;">
+									<b>"An online web search engine made for accessing news locally and across the globe."</b>
+								</p>
 								<ul>
-									<li>Utilized NEWSAPI and Microsoft Azure’s Bing News Search API to retrieve local/global news.</li>
-									<li>Utilized OpenWeatherMap’s Weather API and Geolocation API to display local weather information.</li>
+									<li>Utilizes NEWSAPI and Microsoft Azure’s Bing News Search API to retrieve local/global news.</li>
+									<li>Utilizes OpenWeatherMap’s Weather API and Geolocation API to display local weather information.</li>
 									<li>Constructed with RESTful routing in the backend and utilized React-Router for intuitive URLs</li>
-									<li>User information is stored and encrypted within a PostgreSQL database using Ruby’s “bcrypt” gem. This prevents people with access to the database, to obtain private user information.</li>
+									<li>User information is stored and encrypted within a PostgreSQL database using Ruby’s “bcrypt” gem. <br/> This adds an additional security measure to prevent people with access to the database to obtain private user information.</li>
 								</ul>
 							</div>
 							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<h2 style="font-size: 24px;">Draw Off</h2>
+								<h2 style="font-size: 20px;">Draw Off</h2>
 								<ul class="actions small">
 									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://github.com/IdleScV/mod4_frontend"> Github Frontend</a></li>
 									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://github.com/alanbanks229/mod4_backend"> Github Backend</a></li>
 									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://draw-off-app.herokuapp.com/"> Live Site</a></li>
 									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/watch?v=4vn4oCgs-wc&feature=youtu.be"> Demo Video</a></li>
 								</ul>
-								<p>An online multiplayer game where users are given a prompt to draw and the winner has the most likes.</p>
+								<p class="technical_skills_p">
+									<b>"An online multiplayer drawing game where the winner is determined by having the most likes."</b>
+								</p>
 								<ul>
 									<li>Consists of servers (game lobbies) that allow asynchronous communication, enabling multiple users to interact in a multiplayer setting. </li>
 									<li>Implemented an authentication flow via FireBase Auth, which checks for auth changes client-side.</li>
@@ -95,11 +99,13 @@
 								</ul>
 							</div>
 							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<h2 style="font-size: 24px;">Askit</h2>
+								<h2 style="font-size: 20px;">Askit</h2>
 								<ul class="actions small">
 									<li><a class="button small" rel="noopener noreferrer" target="_blank" href="https://github.com/alanbanks229/Mod_2_Project">Github</a></li>
 								</ul>
-								<p>An online forum for asking and answering questions posted by multiple users.</p>
+								<p class="technical_skills_p">
+									<b>"An online forum for asking and answering questions posted by multiple users."</b>
+								</p>
 								<ul>
 									<li>Rails application constructed with a MVC framework. (Models, Views, Controller)</li>
 									<li>Utilized the ActiveRecord module to construct numerous associations between objects/classes and set up SQlite database. </li>
@@ -131,14 +137,6 @@
 									<li>Proctored and Counseled underclassmen. Provided assistance and community to First-Years.</li>
 								</ul>
 							</div>
-							<div style="border-color: rgb(149, 149, 149)" class="box">
-								<p><strong>Johns Hopkins Medicine<em>  (Sibley Memorial Hospital)  	</em></strong>06/2012 - 08/2014</p>
-								<p>Emergency Room Volunteer</p>
-								<ul>
-									<li>Provided assistance and resources to healthcare workers.</li>
-								</ul>
-							</div>
-							<hr/>
 							<header class="resume_heading">
 								<h2>Education</h2>
 							</header>
@@ -158,6 +156,19 @@
 								<p> <strong>Bowdoin College 	</strong>Brunswick, ME</p>
 								<ul>
 									<li>BA in Music  	05 / 2018</li>
+								</ul>
+							</div>
+							<header class="resume_heading">
+								<h2>Hobbies/Achievements</h2>
+							</header>
+							<div style="border-color: rgb(149, 149, 149)" class="box">
+								<ul>
+									<li>Maryland State Track & Field Champion (2014)</li>
+									<li>Musician</li>
+									<li>Vocalist</li>
+									<li>Runner</li>
+									<li>Video Gamer</li>
+									<li>Youth Coach & Mentor</li>
 								</ul>
 							</div>
 						</div>
