fixed a sleight bug with 'draw off' video going out of bounds inside css container

--- a/project.html
+++ b/project.html
@@ -63,7 +63,7 @@
 
 				<article class="post featured">
 					<header class="major">
-						<h2><a href="#">Projects</a></h2>
+						<h2>Projects</h2>
 					</header>
 					<hr/>
 					<h2>"Current Trends"</h2>
@@ -108,7 +108,7 @@
 							</li>
 						</ul>
 						<div>
-							<iframe height="230px" width="560px" src="https://www.youtube.com/embed/4vn4oCgs-wc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe> 
+							<img><iframe height="260px" width="100%" src="https://www.youtube.com/embed/4vn4oCgs-wc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe></img>
 						</div>
 						<p>An online multiplayer game where users are given a prompt to draw and the winner has the most likes.<br/>
 						<li>Multiple game lobbies!</li>
