redone code to fix draw off video issue, for now need to stick with a fixed width

--- a/project.html
+++ b/project.html
@@ -108,7 +108,7 @@
 							</li>
 						</ul>
 						<div>
-							<img><iframe height="260px" width="100%" src="https://www.youtube.com/embed/4vn4oCgs-wc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe></img>
+							<img><iframe height="260px" width="500px" src="https://www.youtube.com/embed/4vn4oCgs-wc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe></img>
 						</div>
 						<p>An online multiplayer game where users are given a prompt to draw and the winner has the most likes.<br/>
 						<li>Multiple game lobbies!</li>
