--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<meta http-equiv="Refresh" content="2; url=views/index.html">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Refresh" content="3; url=views/index.html">
+    <link rel="stylesheet" href="assets/css/index_page_redirect.css"/>
+    <title>Alan Banks Portfolio</title>
+</head>
+<body onload="move()">
+    <h1 style="text-align: center; color: azure;">Loading Alan's Homepage . . .</h1>
+
+    <div id="myProgress">
+      <div id="myBar">0%</div>
+    </div>
+    <script>
+        var i = 0;
+        function move() {
+          if (i == 0) {
+            i = 1;
+            var elem = document.getElementById("myBar");
+            var width = 10;
+            var id = setInterval(frame, 20);
+            function frame() {
+              if (width >= 100) {
+                clearInterval(id);
+                i = 0;
+              } else {
+                width++;
+                elem.style.width = width + "%";
+                elem.innerHTML = width  + "%";
+              }
+            }
+          }
+        }
+    </script>
+</body>
+</html>
