updated resume PDF file that is downloaded from website, better formatting. Also added comments on root directory index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
+<!-- 
+  Root Directory HTML...
+  Created in order for github pages to render a home page...
+
+  HTML code below will redirect users to actual home page displaying
+  portfolio. After it does a little Javascript loading animation :)
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Right below is where the redirect occurs. -->
     <meta http-equiv="Refresh" content="3; url=views/index.html">
     <link rel="stylesheet" href="assets/css/index_page_redirect.css"/>
     <title>Alan Banks Portfolio</title>
